--- a/Template Samples/HMI/TF8040 Template Samples HMI/Properties/tchmiconfig.json
+++ b/Template Samples/HMI/TF8040 Template Samples HMI/Properties/tchmiconfig.json
@@ -1,5 +1,5 @@
 ﻿{
-  "$schema": "../../Packages/Beckhoff.TwinCAT.HMI.Framework-12.746.3/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
+  "$schema": "../../Packages/Beckhoff.TwinCAT.HMI.Framework-12.748.0/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
   "basePath": "./framework",
   "scaleMode": "None",
   "startupView": "Desktop.view",
@@ -80,14 +80,14 @@
       "keepAlive": true
     },
     {
-      "url": "Content/Plants/SiteA_B_IFP_F01_AC_RLT01.content",
+      "url": "Content/Plants/Standard_MAIN_AC_AHU01.content",
       "preload": false,
       "keepAlive": true
     },
     {
-      "url": "Content/Plants/SiteA_B_IFP_F01_HTG_HZK01.content",
+      "url": "Content/Plants/Standard_MAIN_H_HTC01.content",
       "preload": false,
-      "keepAlive": true
+      "keepAlive": false
     }
   ],
   "views": [
