TF8040 Concept Samples HMI: - bump version;

--- a/Conecpt Samples/HMI/TF8040 Concept Samples HMI/Properties/tchmiconfig.tpl.json
+++ b/Conecpt Samples/HMI/TF8040 Concept Samples HMI/Properties/tchmiconfig.tpl.json
@@ -1,5 +1,5 @@
 ﻿{
-  "$schema": "../../Packages/Beckhoff.TwinCAT.HMI.Framework-12.748.0/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
+  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.12.750.1/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
   "basePath": "./framework",
   "scaleMode": "None",
   "startupView": "Desktop.view",
@@ -44,62 +44,74 @@
     {
       "url": "Content/Pages/EventList.content",
       "preload": false,
-      "keepAlive": false
+      "keepAlive": false,
+      "loadSync": false
     },
     {
       "url": "Content/Pages/PlantView.content",
       "preload": false,
-      "keepAlive": false
+      "keepAlive": false,
+      "loadSync": false
     },
     {
       "url": "Content/Pages/ProjectNavigation.content",
       "preload": false,
-      "keepAlive": false
+      "keepAlive": false,
+      "loadSync": false
     },
     {
       "url": "Content/Pages/ServerLog.content",
       "preload": false,
-      "keepAlive": false
+      "keepAlive": false,
+      "loadSync": false
     },
     {
       "url": "Content/Pages/StartPage.content",
       "preload": false,
-      "keepAlive": false
+      "keepAlive": false,
+      "loadSync": false
     },
     {
       "url": "Content/Samples/BaObjects.content",
       "preload": false,
-      "keepAlive": false
+      "keepAlive": false,
+      "loadSync": false
     },
     {
       "url": "Content/Samples/BasicComponents.content",
       "preload": false,
-      "keepAlive": false
+      "keepAlive": false,
+      "loadSync": false
     },
     {
       "url": "Content/Samples/ColorPicker.content",
       "preload": false,
-      "keepAlive": false
+      "keepAlive": false,
+      "loadSync": false
     },
     {
       "url": "Content/Samples/Events.content",
       "preload": false,
-      "keepAlive": false
+      "keepAlive": false,
+      "loadSync": false
     },
     {
       "url": "Content/Samples/RoomAutomation.content",
       "preload": false,
-      "keepAlive": false
+      "keepAlive": false,
+      "loadSync": false
     },
     {
       "url": "Content/Samples/Schedule.content",
       "preload": false,
-      "keepAlive": false
+      "keepAlive": false,
+      "loadSync": false
     },
     {
       "url": "Content/Samples/Trend.content",
       "preload": false,
-      "keepAlive": false
+      "keepAlive": false,
+      "loadSync": false
     }
   ],
   "views": [
@@ -190,8 +202,8 @@
   ],
   "actionTemplates": [],
   "languages": {
-    "de-DE": "Localization\\de-DE.localization",
-    "en-US": "Localization\\en-US.localization"
+    "de-DE": "Localization/de-DE.localization",
+    "en-US": "Localization/en-US.localization"
   },
   "languageFallback": "",
   "disableLoadingOptimization": false,
@@ -206,18 +218,6 @@
   },
   "packages": [
     {
-      "name": "Beckhoff.TwinCAT.HMI.Controls",
-      "basePath": "/Beckhoff.TwinCAT.HMI.Controls"
-    },
-    {
-      "name": "Beckhoff.TwinCAT.HMI.Framework",
-      "basePath": "/framework"
-    },
-    {
-      "name": "Beckhoff.TwinCAT.HMI.Functions",
-      "basePath": "/Beckhoff.TwinCAT.HMI.Functions"
-    },
-    {
       "name": "Beckhoff.TwinCAT.HMI.BA.Controls",
       "basePath": "/Beckhoff.TwinCAT.HMI.BA.Controls"
     },
@@ -230,8 +230,28 @@
       "basePath": "/Beckhoff.TwinCAT.HMI.BA.Icons"
     },
     {
+      "name": "Beckhoff.TwinCAT.HMI.Controls",
+      "basePath": "/Beckhoff.TwinCAT.HMI.Controls"
+    },
+    {
+      "name": "Beckhoff.TwinCAT.HMI.Framework",
+      "basePath": "/framework"
+    },
+    {
+      "name": "Beckhoff.TwinCAT.HMI.Functions",
+      "basePath": "/Beckhoff.TwinCAT.HMI.Functions"
+    },
+    {
       "name": "Beckhoff.TwinCAT.HMI.ResponsiveNavigation",
       "basePath": "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation"
+    }
+  ],
+  "keyboardLayouts": [
+    {
+      "url": "KeyboardLayouts/German - compact.keyboard.json"
+    },
+    {
+      "url": "KeyboardLayouts/US - compact.keyboard.json"
     }
   ]
 }
