TF8040 Template Samples HMI: - bump version;

--- a/Template Samples/HMI/TF8040 Template Samples HMI/Properties/tchmiconfig.tpl.json
+++ b/Template Samples/HMI/TF8040 Template Samples HMI/Properties/tchmiconfig.tpl.json
@@ -1,5 +1,5 @@
 ﻿{
-  "$schema": "../../Packages/Beckhoff.TwinCAT.HMI.Framework-12.748.0/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
+  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.12.750.1/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
   "basePath": "./framework",
   "scaleMode": "None",
   "startupView": "Desktop.view",
@@ -62,32 +62,38 @@
     {
       "url": "Content/Pages/EventList.content",
       "preload": false,
-      "keepAlive": true
+      "keepAlive": true,
+      "loadSync": false
     },
     {
       "url": "Content/Pages/ProjectNavigation.content",
       "preload": false,
-      "keepAlive": true
+      "keepAlive": true,
+      "loadSync": false
     },
     {
       "url": "Content/Pages/ServerLog.content",
       "preload": false,
-      "keepAlive": true
+      "keepAlive": true,
+      "loadSync": false
     },
     {
       "url": "Content/Pages/StartPage.content",
       "preload": false,
-      "keepAlive": true
+      "keepAlive": true,
+      "loadSync": false
     },
     {
       "url": "Content/Plants/Standard_MAIN_AC_AHU01.content",
       "preload": false,
-      "keepAlive": true
+      "keepAlive": true,
+      "loadSync": false
     },
     {
       "url": "Content/Plants/Standard_MAIN_H_HTC01.content",
       "preload": false,
-      "keepAlive": false
+      "keepAlive": false,
+      "loadSync": false
     }
   ],
   "views": [
@@ -126,8 +132,8 @@
   ],
   "actionTemplates": [],
   "languages": {
-    "de-DE": "Localization\\de-DE.localization",
-    "en-US": "Localization\\en-US.localization"
+    "de-DE": "Localization/de-DE.localization",
+    "en-US": "Localization/en-US.localization"
   },
   "languageFallback": "",
   "disableLoadingOptimization": false,
@@ -141,6 +147,18 @@
     "symbolError": "Ignore"
   },
   "packages": [
+    {
+      "name": "Beckhoff.TwinCAT.HMI.BA.Controls",
+      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Controls"
+    },
+    {
+      "name": "Beckhoff.TwinCAT.HMI.BA.Framework",
+      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Framework"
+    },
+    {
+      "name": "Beckhoff.TwinCAT.HMI.BA.Icons",
+      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Icons"
+    },
     {
       "name": "Beckhoff.TwinCAT.HMI.Controls",
       "basePath": "/Beckhoff.TwinCAT.HMI.Controls"
@@ -156,18 +174,14 @@
     {
       "name": "Beckhoff.TwinCAT.HMI.ResponsiveNavigation",
       "basePath": "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation"
+    }
+  ],
+  "keyboardLayouts": [
+    {
+      "url": "KeyboardLayouts/German - compact.keyboard.json"
     },
     {
-      "name": "Beckhoff.TwinCAT.HMI.BA.Icons",
-      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Icons"
-    },
-    {
-      "name": "Beckhoff.TwinCAT.HMI.BA.Framework",
-      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Framework"
-    },
-    {
-      "name": "Beckhoff.TwinCAT.HMI.BA.Controls",
-      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Controls"
+      "url": "KeyboardLayouts/US - compact.keyboard.json"
     }
   ]
 }
