--- a/APIs/C#/TerminalClient/S10-Queries/S10-Queries.csproj
+++ b/APIs/C#/TerminalClient/S10-Queries/S10-Queries.csproj
@@ -9,7 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Beckhoff.Ba.TerminalClient" Version="2.1.1" />
+    <PackageReference Include="Beckhoff.TwinCAT.Ads" Version="5.0.492" />
+    <PackageReference Include="Beckhoff.TwinCAT.BA.TerminalClient" Version="2.2.27" />
   </ItemGroup>
 
 </Project>
